--- a/popup.html
+++ b/popup.html
@@ -99,24 +99,71 @@
     .settings-field {
       margin-top: 10px;
     }
+    #dim-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.45); /* Slightly darker */
+      z-index: 998;
+      pointer-events: none; /* Allow interaction with spotlight elements */
+    }
+
+
+    #spotlight {
+      position: relative;
+      z-index: 999;
+      padding: 0; /* Remove extra padding to avoid interference */
+      border-radius: 0; /* Match the field being highlighted */
+    }
+
+
+    .highlighted-field {
+      border: 2px solid #007bff;
+      border-radius: 6px;
+      background-color: #eaf4ff;
+      box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+      transition: all 0.3s ease;
+    }
+
+    .spotlight-field {
+      transition: opacity 0.3s ease, transform 0.3s ease;
+    }
+
+    .spotlight-field.hidden {
+      opacity: 0;
+      transform: scale(0.95);
+      pointer-events: none;
+    }
+
   </style>
 </head>
 <body>
+  
   <h1>Indeed Job to Resume</h1>
   
   <p id="instructions" class="info">Click "Begin Now" to start selecting job information.</p>
+  <div id="dim-overlay" class="hidden"></div>
+  <div id="spotlight">
+    <div class="spotlight-field" id="spotlight-job-title">
+      <label for="job-title">Job Title</label>
+      <input type="text" id="job-title" placeholder="Not selected yet" readonly>
+      <small id="job-title-xpath" class="info"></small>
+    </div>
   
-  <label for="job-title">Job Title</label>
-  <input type="text" id="job-title" placeholder="Not selected yet" readonly>
-  <small id="job-title-xpath" class="info"></small>
+    <div class="spotlight-field hidden" id="spotlight-company-name">
+      <label for="company-name">Company Name</label>
+      <input type="text" id="company-name" placeholder="Not selected yet" readonly>
+      <small id="company-name-xpath" class="info"></small>
+    </div>
   
-  <label for="company-name">Company Name</label>
-  <input type="text" id="company-name" placeholder="Not selected yet" readonly>
-  <small id="company-name-xpath" class="info"></small>
-  
-  <label for="job-description">Job Description</label>
-  <textarea id="job-description" placeholder="Not selected yet" rows="5" readonly></textarea>
-  <small id="job-description-xpath" class="info"></small>
+    <div class="spotlight-field hidden" id="spotlight-job-description">
+      <label for="job-description">Job Description</label>
+      <textarea id="job-description" placeholder="Not selected yet" rows="5" readonly></textarea>
+      <small id="job-description-xpath" class="info"></small>
+    </div>
+  </div>
   
   <div class="divider"></div>
   
