--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Job to Resume</title>
   <style>
+    /* Global Styles */
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       padding: 15px;
@@ -12,7 +13,9 @@
       background-color: #f9f9f9;
       color: #333;
       line-height: 1.5;
+      box-sizing: border-box;
     }
+
     h1 {
       font-size: 22px;
       margin-bottom: 15px;
@@ -20,6 +23,7 @@
       text-align: center;
       font-weight: 600;
     }
+
     label {
       display: block;
       font-weight: 500;
@@ -27,6 +31,7 @@
       margin-bottom: 5px;
       color: #555;
     }
+
     input, textarea {
       width: 100%;
       padding: 10px;
@@ -36,11 +41,14 @@
       background-color: #fff;
       font-size: 14px;
       color: #333;
+      box-sizing: border-box; /* Ensure padding and border are included in the total width */
     }
+
     input[readonly], textarea[readonly] {
       background-color: #f5f5f5;
       color: #777;
     }
+
     button {
       padding: 12px 20px;
       font-size: 16px;
@@ -53,29 +61,36 @@
       width: 100%;
       transition: background-color 0.3s ease;
     }
+
     button[disabled] {
       background-color: #ccc;
       cursor: not-allowed;
     }
+
     button:hover:enabled {
       background-color: #0056b3;
     }
+
     .info {
       font-size: 13px;
       color: #666;
     }
+
     .hidden {
       display: none;
     }
+
     .divider {
       margin: 20px 0;
       border-top: 1px solid #ddd;
     }
+
     #instructions {
       text-align: center;
       font-size: 14px;
       margin-bottom: 20px;
     }
+
     details {
       margin-top: 20px;
       border: 1px solid #ddd;
@@ -83,6 +98,7 @@
       background-color: #f5f5f5;
       padding: 10px;
     }
+
     details summary {
       font-size: 16px;
       font-weight: 500;
@@ -90,35 +106,20 @@
       cursor: pointer;
       margin-bottom: 10px;
     }
+
     details summary:hover {
       color: #0056b3;
     }
+
     details[open] {
       padding: 15px;
     }
+
     .settings-field {
       margin-top: 10px;
     }
-    #dim-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.45); /* Slightly darker */
-      z-index: 998;
-      pointer-events: none; /* Allow interaction with spotlight elements */
-    }
 
-
-    #spotlight {
-      position: relative;
-      z-index: 999;
-      padding: 0; /* Remove extra padding to avoid interference */
-      border-radius: 0; /* Match the field being highlighted */
-    }
-
-
+    /* Highlighted Field Styles */
     .highlighted-field {
       border: 2px solid #007bff;
       border-radius: 6px;
@@ -127,16 +128,12 @@
       transition: all 0.3s ease;
     }
 
+    /* Ensure all spotlight fields are visible and fully covered by the highlight */
     .spotlight-field {
-      transition: opacity 0.3s ease, transform 0.3s ease;
+      position: relative;
+      width: 100%;
+      box-sizing: border-box; /* Include padding and border in the element's total width and height */
     }
-
-    .spotlight-field.hidden {
-      opacity: 0;
-      transform: scale(0.95);
-      pointer-events: none;
-    }
-
   </style>
 </head>
 <body>
@@ -144,7 +141,7 @@
   <h1>Indeed Job to Resume</h1>
   
   <p id="instructions" class="info">Click "Begin Now" to start selecting job information.</p>
-  <div id="dim-overlay" class="hidden"></div>
+  
   <div id="spotlight">
     <div class="spotlight-field" id="spotlight-job-title">
       <label for="job-title">Job Title</label>
@@ -152,13 +149,13 @@
       <small id="job-title-xpath" class="info"></small>
     </div>
   
-    <div class="spotlight-field hidden" id="spotlight-company-name">
+    <div class="spotlight-field" id="spotlight-company-name">
       <label for="company-name">Company Name</label>
       <input type="text" id="company-name" placeholder="Not selected yet" readonly>
       <small id="company-name-xpath" class="info"></small>
     </div>
   
-    <div class="spotlight-field hidden" id="spotlight-job-description">
+    <div class="spotlight-field" id="spotlight-job-description">
       <label for="job-description">Job Description</label>
       <textarea id="job-description" placeholder="Not selected yet" rows="5" readonly></textarea>
       <small id="job-description-xpath" class="info"></small>
